<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_slice_permission_allow">Allow</string>
    <string name="abc_slice_permission_checkbox">Allow %1$s to show slices from any app</string>
    <string name="abc_slice_permission_deny">Deny</string>
    <string name="abc_slice_permission_text_1">- It can read information from %1$s</string>
    <string name="abc_slice_permission_text_2">- It can take actions inside %1$s</string>
    <string name="abc_slice_permission_title">Allow %1$s to show %2$s slices?</string>
    <string name="abc_slices_permission_request">%1$s wants to show %2$s slices</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="aplosA11yChartTypeCombo">Combo Chart</string>
    <string name="aplosA11yChartTypeGroupBar">{0,choice,1#|1&lt;Grouped }Bar</string>
    <string name="aplosA11yChartTypeLine">Line</string>
    <string name="aplosA11yChartTypePie">Pie</string>
    <string name="aplosA11yChartTypeStackedBar">{0,choice,1#|1&lt;Stacked }Bar</string>
    <string name="aplosA11yChartTypeStackedLine">{0,choice,1#|1&lt;Stacked }Line</string>
    <string name="aplosA11yChartTypeStackedStep">{0,choice,1#|1&lt;Stacked }Step</string>
    <string name="aplosA11yChartTypeStep">Step</string>
    <string name="aplosA11yChartTypeTemplate">{0} Chart</string>
    <string name="aplosA11yDomainExplorerDomainAnnounce">{0}:</string>
    <string name="aplosA11yDomainExplorerValueAnnounce">{0} is {1}</string>
    <string name="aplosA11yUnknownChartType">Chart</string>
    <string name="aplosExploreModeAvailableAnnouncement">Click to start exploring chart.</string>
    <string name="aplosExploreModeBorder">Leaving explorable chart boundary.</string>
    <string name="aplosExploreModeEndBoundary">End of chart.</string>
    <string name="aplosExploreModeStartBoundary">Explore Chart using directional controls or by touch.</string>
    <string name="app_dashboard_label">Show app dashboard</string>
    <string name="app_details_toolbar_title">App Usage</string>
    <string name="app_limit_dialog_learn_more_button">Learn more</string>
    <string name="app_limit_dialog_message">%%s is paused since your app timer ran out. To change settings, tap “%1$s”.</string>
    <string name="app_limit_every_day">Every day</string>
    <string name="app_limit_message">%1$s app timer</string>
    <string name="app_limit_slice_title">App timer</string>
    <string name="app_limit_warning_notification_channel_name">App timer warnings</string>
    <string name="app_limit_warning_notification_feature_name">Digital Wellbeing · App timer</string>
    <string name="app_list_heading">Time spent per app</string>
    <string name="app_name">Digital Wellbeing</string>
    <string name="app_no_limit_message">No timer set</string>
    <string name="app_notification_settings_summary" />
    <string name="app_notification_settings_title">Time spent in apps</string>
    <string name="app_notifications_label">Manage notifications</string>
    <string name="app_paused_snackbar">App paused</string>
    <string name="app_settings_heading">Settings</string>
    <string name="app_time_limit_label">App timer</string>
    <string name="app_usage">Used for %1$s %2$s</string>
    <string name="app_usage_bar_chart_data_series_name">App usage data</string>
    <string name="app_usage_cell_content_description">%1$s used for %2$s</string>
    <string name="app_usage_slice_message">Used for %1$s</string>
    <string name="app_usage_slice_title">Screen time</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="authority">com.google.android.apps.wellbeing.slices</string>
    <string name="auto_dnd_auto_zen_rule_name">Flip to Shhh</string>
    <string name="auto_dnd_gestures_settings_title">Flip to Shhh</string>
    <string name="auto_dnd_off">Off</string>
    <string name="auto_dnd_on">On</string>
    <string name="auto_dnd_requested_off_error_message">"Can't turn off flip to Shhh"</string>
    <string name="auto_dnd_requested_on_error_message">"Can't turn on flip to Shhh"</string>
    <string name="auto_dnd_search_breadcrumbs">System > Gestures > Flip to Shhh</string>
    <string name="auto_dnd_setup_notification_text">To finish setting up flip to Shhh, restart your phone</string>
    <string name="bar_chart_domain_axis_separator">•</string>
    <string name="beta">BETA</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cannot_set_limits_description">"App timers aren't available for work apps or fully managed devices"</string>
    <string name="character_counter_content_description">%1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chevron_next_description">Go to the next day</string>
    <string name="chevron_previous_description">Go to the previous day</string>
    <string name="close">Close</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="content_description_for_pie_chart_center">Go to dashboard</string>
    <string name="content_description_for_time_spent">Used for %s</string>
    <string name="content_description_for_time_spent_today">Phone used for %1$s today</string>
    <string name="custom_limit">Custom timer</string>
    <string name="custom_limit_dialog_label">This app timer for %1$s will reset at midnight</string>
    <string name="custom_limit_dialog_title">Set app timer</string>
    <string name="daily_button_text">Daily</string>
    <string name="dashboard_feature_summary_text">Screen time, unlocks, notifications received</string>
    <string name="dashboard_feature_summary_text_without_unlock_count">Screen time, notifications received</string>
    <string name="dashboard_search_keywords">App dashboard, notifications received, unlocks</string>
    <string name="dashboard_toolbar_title">Dashboard</string>
    <string name="database_error_message">"Can't set app timer"</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="dnd_item_label">Do Not Disturb</string>
    <string name="grayscale_item_label">Grayscale</string>
    <string name="hourly_button_text">Hourly</string>
    <string name="open_source_licenses">Open-source licenses</string>
    <string name="pref_auto_dnd_enable_summary">To turn on Do Not Disturb, place your phone face down on a flat surface</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="send_feedback_title">Send feedback</string>
    <string name="set_timers_card_body">You can set daily timers for most apps. When the app timer ends, the app is paused for the rest of the day.</string>
    <string name="set_timers_card_dismiss_button_content_description">Dismiss card</string>
    <string name="set_timers_card_title">Set timers for your apps</string>
    <string name="sleep_screen_item_label">"Don't wake screen"</string>
    <string name="terms_of_service_title">Terms of Service</string>
    <string name="turn_off_usage_access">Turn off usage access</string>
    <string name="wind_down_end_label">End</string>
    <string name="wind_down_settings_heading">Wind Down settings</string>
    <string name="wind_down_start_label">Start</string>
</resources>