<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v4.widget.NestedScrollView android:orientation="vertical" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fillViewport="true" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <VideoView android:layout_gravity="center_horizontal" android:id="@id/video_view" android:layout_width="fill_parent" android:layout_height="240.0dip" />
            <View android:id="@id/divider" android:background="@color/tertiary_grey" android:layout_width="fill_parent" android:layout_height="0.75dip" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/set_auto_dnd_enabled" android:background="?android:selectableItemBackground" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/settings_side_margin" android:paddingEnd="16.0dip" android:paddingVertical="16.0dip">
                <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <TextView android:textAppearance="?textAppearanceBody1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/auto_dnd_gestures_settings_title" />
                    <TextView android:textAppearance="?textAppearanceBody2" android:textColor="@color/secondary_grey" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pref_auto_dnd_enable_summary" />
                </LinearLayout>
                <android.support.v7.widget.SwitchCompat android:id="@id/auto_dnd_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>