<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/app_details_root" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingTop="20.0dip" android:paddingBottom="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="72.0dip" android:paddingEnd="@dimen/default_screen_margin">
        <ImageView android:id="@id/app_icon" android:layout_width="48.0dip" android:layout_height="48.0dip" />
        <Space android:layout_width="@dimen/default_screen_margin" android:layout_height="fill_parent" />
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:textAppearance="?textAppearanceHeadline3" android:textColor="@color/google_blue600" android:id="@id/usage_label" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <TextView android:textAppearance="?textAppearanceSubhead2" android:textColor="@color/secondary_grey" android:id="@id/date_label" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <android.support.design.chip.ChipGroup android:id="@id/time_series_granularity_button_group" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingVertical="6.0dip" app:singleSelection="true">
            <android.support.design.chip.Chip android:id="@id/daily_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/daily_button_text" style="@style/AppDetailsTimeGranularityChip" />
            <android.support.design.chip.Chip android:id="@id/hourly_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hourly_button_text" style="@style/AppDetailsTimeGranularityChip" />
        </android.support.design.chip.ChipGroup>
    </LinearLayout>
    <com.google.android.apps.wellbeing.layoutdirection.RtlAwareViewPager android:id="@id/hourly_view_pager" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/bar_chart_height" />
    <com.google.android.apps.wellbeing.layoutdirection.RtlAwareViewPager android:id="@id/daily_view_pager" android:layout_width="fill_parent" android:layout_height="@dimen/bar_chart_height" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:paddingTop="@dimen/default_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <android.support.design.button.MaterialButton android:id="@id/chevron_previous" android:visibility="invisible" android:contentDescription="@string/chevron_previous_description" app:icon="@drawable/quantum_ic_chevron_left_grey600_24" style="@style/Widget.Wellbeing.ChevronButton" />
        <TextView android:textAppearance="?textAppearanceBody1" android:gravity="center" android:id="@id/date_selection_label" android:layout_width="200.0dip" android:layout_height="wrap_content" android:paddingVertical="@dimen/default_margin" />
        <android.support.design.button.MaterialButton android:id="@id/chevron_next" android:visibility="invisible" android:contentDescription="@string/chevron_next_description" app:icon="@drawable/quantum_ic_chevron_right_grey600_24" style="@style/Widget.Wellbeing.ChevronButton" />
    </LinearLayout>
</LinearLayout>