<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/usage_dashboard" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.apps.wellbeing.common.ui.menubar.MenuBarView android:id="@id/menu_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <android.support.design.widget.CoordinatorLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <android.support.design.widget.AppBarLayout android:layout_width="fill_parent" android:layout_height="wrap_content" app:elevation="0.0dip">
            <android.support.design.widget.CollapsingToolbarLayout android:id="@id/collapsing_toolbar" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_scrollFlags="exitUntilCollapsed|scroll">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <LinearLayout android:orientation="horizontal" android:id="@id/dashboard" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                    <android.support.design.card.MaterialCardView android:id="@id/set_timers_info_card" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" app:cardCornerRadius="8.0dip" app:cardElevation="2.0dip" app:strokeWidth="0.0dip" style="@style/Widget.MaterialComponents.CardView">
                        <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                            <LinearLayout android:layout_gravity="top" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                                <TextView android:textAppearance="?textAppearanceSubtitleAlt1" android:gravity="center_vertical" android:padding="6.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/set_timers_card_title" android:drawablePadding="8.0dip" android:layout_weight="1.0" android:drawableStart="@drawable/ic_hourglass_empty_google_blue600_24dp" />
                                <android.support.design.button.MaterialButton android:layout_gravity="end" android:id="@id/set_timers_info_card_dismiss_button" android:padding="0.0dip" android:layout_width="20.0dip" android:layout_height="20.0dip" android:insetLeft="0.0dip" android:insetRight="0.0dip" android:insetTop="0.0dip" android:insetBottom="0.0dip" android:contentDescription="@string/set_timers_card_dismiss_button_content_description" app:icon="@drawable/quantum_ic_close_grey600_18" app:iconTint="@color/secondary_grey" app:rippleColor="@color/google_white" style="@style/Widget.GoogleMaterial.TextButton.Icon" />
                            </LinearLayout>
                            <TextView android:textAppearance="?textAppearanceBody2" android:textColor="@color/secondary_grey" android:padding="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/set_timers_card_body" />
                        </LinearLayout>
                    </android.support.design.card.MaterialCardView>
                </LinearLayout>
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>
        <com.google.android.apps.wellbeing.appusage.ui.OneDayAppDataListView android:id="@id/app_list" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>